--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build:storybook": "build-storybook"
   },
   "dependencies": {
-    "@rollup/plugin-terser": "^0.4.0",
     "element-plus": "^2.2.30",
+    "postcss": "^8.4.21",
     "vue": "^3.2.37"
   },
   "devDependencies": {
@@ -30,12 +30,14 @@
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.34.1",
     "rollup-plugin-vue": "^6.0.0",
     "storybook-dark-mode": "^1.1.0",
     "typescript": "^4.5.5",
     "vite": "^3.0.4",
     "vue-loader": "^16.8.3",
-    "vue-tsc": "^0.39.4"
+    "vue-tsc": "^0.39.4",
+    "postcss": "^8.4.21"
   }
 }
